feat: add user stats timeseries
